--- a/package.json
+++ b/package.json
@@ -2,18 +2,37 @@
   "name": "schedule_management",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
+    "back": "nodemon src/server/app.js",
     "dev": "next dev",
+    "all": "concurrently \"npm run back\" \"npm run dev\"",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.1",
+    "axios": "^1.7.7",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.3",
+    "concurrently": "^9.1.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.1",
+    "jsonwebtoken": "^9.0.2",
+    "mysql2": "^3.11.4",
+    "next": "15.0.2",
     "react": "19.0.0-rc-02c0e824-20241028",
     "react-dom": "19.0.0-rc-02c0e824-20241028",
-    "next": "15.0.2"
+    "react-hook-form": "^7.53.1",
+    "sequelize": "^6.37.5",
+    "sqlite3": "^5.1.7",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
+    "nodemon": "^3.1.7",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
   }
